--- a/src/sass/theme/_child_theme.scss
+++ b/src/sass/theme/_child_theme.scss
@@ -611,7 +611,7 @@ body {
 	margin: 0;
 
 	@media(max-width:$md) {
-		padding-top: 2rem;
+		// padding-top: 5rem;
 	}
 
 	.container {
@@ -653,7 +653,15 @@ body {
 
 			@media(max-width:$sm) {
 				h1 {
-					font-size: 32px;
+					font-size: 28px;
+				}
+
+				h2 {
+					font-size: 16px;
+				}
+
+				img.droid {
+					max-width: 350px !important;
 				}
 			}			
 
@@ -683,5 +691,4 @@ body {
 	-webkit-box-flex: 1;
     flex-grow: 1;
     flex-shrink: 0;
-    padding: 3rem 1.5rem;
 }
